--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
     </div>
   </section>
 
+  <section class="container secundario">
+
+    <div class="container__descricao">
+      <p>Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia
+        e aprender inglês ou espanhol, onde e como quiser.</p>
+      <a href="www.alura.com.br">Assine o Combo+</a>
+    </div>
+
+    <img src="img/Telas.png" alt="Telas do Alura Língua e do Alura Plus.">
+  </section>
+
   <script src="script.js"></script>
 </body>
 
